# warthunder-analysis

./: .gitignore  README.md  pyproject.toml
warthunder_analysis/: extraction.py  ground_vehicles.ipynb  main.py  match.py  utils.py
warthunder_analysis/data/: premium_ground_vehicle_links.txt
