[tool.poetry]
name = "warthunder-analysis"
version = "0.1.0"
description = ""
authors = ["Andrew Jarvis <ajarvis7771@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
html5lib = "^1.1"
jupyter = "^1.0.0"
aiohttp = "^3.8.5"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
